--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,7 +71,7 @@
 }
 
 .black_btn {
-  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-gray-500 hover:text-black text-center text-sm font-inter flex items-center justify-center;
 }
 
 .outline_btn {
@@ -79,7 +79,7 @@
 }
 
 .menu_btn {
-  @apply rounded-full  bg-transparent py-1.5 px-5 text-black transition-all hover:cursor-pointer hover:border border-black flex items-center justify-center;
+  @apply rounded-full  bg-transparent py-1.5 px-5 text-black transition-all hover:cursor-pointer hover:scale-125 flex items-center justify-center;
 }
 
 .head_text {
@@ -87,7 +87,7 @@
 }
 
 .category_text {
-  @apply mt-10 text-lg font-bold text-black sm:text-6xl;
+  @apply mt-5 font-satoshi text-black sm:text-xl hover:underline hover:cursor-pointer;
 }
 
 .orange_gradient {
@@ -109,6 +109,9 @@
 .search_input {
   @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
 }
+.date_input {
+  @apply block w-1/2 rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
+}
 
 .copy_btn {
   @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
@@ -119,12 +122,12 @@
 }
 
 .prompt_layout {
-  @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
+  @apply space-y-6 py-2 sm:columns-2 sm:gap-6 xl:columns-3;
 }
 
 /* Feed Component */
 .feed {
-  @apply mt-16 mx-auto w-full max-w-xl flex justify-center items-center flex-col gap-2;
+  @apply mt-5 mx-auto w-full max-w-xl flex justify-center items-center flex-col gap-2;
 }
 
 /* Form Component */
@@ -142,7 +145,7 @@
 }
 
 .dropdown {
-  @apply absolute right-0 top-full mt-3 w-full p-5 bg-gray-200 rounded-lg min-w-[210px] flex flex-col gap-2 justify-end items-start;
+  @apply absolute right-0 top-full mt-3 p-5 bg-gray-200 rounded-lg min-w-[210px] flex flex-col gap-2 justify-end items-start hover:cursor-pointer opacity-90;
 }
 
 .dropdown_link {
@@ -151,7 +154,7 @@
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply flex-1 drop-shadow-md break-inside-avoid border border-8 hover:border-yellow-500 hover:cursor-pointer rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
 }
 
 .flex-center {
