Added events to the page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -152,9 +152,9 @@
   @apply text-sm font-inter text-gray-700 hover:text-gray-500 font-medium;
 }
 
-/* PromptCard Component */
+/* Vehicle Component */
 .prompt_card {
-  @apply flex-1 drop-shadow-md break-inside-avoid border border-8 hover:border-yellow-500 hover:cursor-pointer rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply flex-1 drop-shadow-md break-inside-avoid border border-8 hover:border-yellow-500 hover:shadow-lg hover:cursor-pointer rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
 }
 
 .flex-center {
